Fix GRC assessment Sonar findings